fixed 'reset' button width and text-alignment for smaller screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -259,7 +259,8 @@ p {
 
   #reset-btn,
   #theme-select {
-    width: 15%;
+    width: 17%;
+    text-align: center;
     padding: 10px 20px;
     font-size: 0.9rem;
   }
